<resources>
    <string name="app_name">DorothyAlmacen</string>
    <string name="warehouse_icon">🏬</string>

    <!-- Gestion de Lotes -->
    <string name="titulo_gestion_lotes">Gestión de Lotes</string>
    <string name="registrar_lote">Registrar Lote</string>
    <string name="detalle_producto_lote">Detalle del Producto del Lote</string>
    <string name="producto_asociado">Producto Asociado</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="empleadoTitulo1">Gestión de Empleados</string>
    <string name="empleadoInputNombre">Ingrese nombre de empleado</string>
    <string name="empleadoInputContrasenia">Ingrese contraseña de empleado</string>
    <string name="empleadoBtnBuscar">Buscar</string>
    <string name="empleadoBtnAgregar">Agregar empleado</string>
    <string name="mainRegresar">Regresar</string>

    <string-array name="empleadoRolListado">
        <item>Encargado de lotes</item>Add commentMore actions
        <item>Encargado de productos</item>
        <item>Encargado de clientes</item>
        <item>Jefe de area</item>
        <item>Administrador</item>
    </string-array>


    <!-- Spinner de tipo de lote -->
    <string-array name="tipo_lote">
        <item>Entrada</item>
        <item>Salida</item>
    </string-array>

    <string name="empleadoTitulo1">Gestión de Empleados</string>
    <string name="empleadoInputNombre">Ingrese nombre de empleado</string>
    <string name="empleadoInputContrasenia">Ingrese contraseña de empleado</string>
    <string name="empleadoBtnBuscar">Buscar</string>
    <string name="empleadoBtnAgregar">Agregar empleado</string>
    <string name="mainRegresar">Regresar</string>

    <string-array name="empleadoRolListado">
        <item>Encargado de lotes</item>Add commentMore actions
        <item>Encargado de productos</item>
        <item>Encargado de clientes</item>
        <item>Jefe de area</item>
        <item>Administrador</item>
    </string-array>
</resources>